--- a/FTC5421/build.gradle
+++ b/FTC5421/build.gradle
@@ -7,9 +7,9 @@
 // the build definitions, you can place those customizations in this file, but
 // please think carefully as to whether such customizations are really necessary
 // before doing so.
-
-
 // Custom definitions may go here
-
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+dependencies {
+    compile files('/Users/Peter/Code/FTC_2016-2017/libs/json-simple-1.1.1.jar')
+}
