--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@
 buildscript {
     repositories {
         jcenter()
+        flatDir {
+            dir 'libs'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
