--- a/RMRobotics/build.gradle
+++ b/RMRobotics/build.gradle
@@ -15,3 +15,6 @@ dependencies {
     compile project(':FtcRobotController')
     compile project(':openCVLibrary320')
 }
+android {
+    buildToolsVersion '25.0.0'
+}
